2002-04-09  Andrew Csillag  <drew@yahoo.com>

	* SkunkWeb 3.2 cut

2002-04-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/Date/TimeUtil.py (untilString): fixes what looks like
	a cut-and-paste error that has been lurking here since 3.0.

2002-04-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args): 
	fixed bug that produced UnboundLocalError in some cases

	* SkunkWeb/sample_webdocs/demo/gallery/thumbnail.py: fixed
	dumb typo that produced NameError.

2002-03-31  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sample_webdocs/demo/gallery/thumbnail.py: now use
	CONNECTION.extract_args.

	* SkunkWeb/Services/pars: removing from cvs and distro.

	* SkunkWeb/configure.in, SkunkWeb/configure: remove par script,
	added productwiz.

	* SkunkWeb/Services/Makefile.in: put productwiz script in bin/.

	* SkunkWeb/Services/product/productwiz.in: added script to start
	the product wizard, for the truly lazy.

2002-03-30  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: fixed typo in documentation of
	rewrite service, and added documentation of Include directive.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py (__all__): added
	support for "from ConfigAdditives import *"; added Include
	directive

	* SkunkWeb/SkunkWeb/KickStart.py (CONFIG_STRING): now do 
	"from ConfigAdditives import *", which is now preceded by
	the import from SkunkWeb.constants (ConfigAdditives clobbers
	some of the latter)

2002-03-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Makefile.in (DEMO_FILES): adding Drew's new files to 
	makefile

2002-03-18  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sample_webdocs/demo/geeknews/newsvac.comp, dcomps/newsvac.pydcmp:
	added

	* SkunkWeb/sample_webdocs/demo/geeknews/index.html, dcomps/newsforge.pydcmp:
	fixes now that newsforge and linux.com have changed a bit	

2002-03-03  Jacob Smullyan  <smulloni@smullyan.org>
